Oops, forgot to rename it here.

--- a/javascript/javascript-Lim-Chee-Aun.html
+++ b/javascript/javascript-Lim-Chee-Aun.html
@@ -2,7 +2,7 @@
 <title>Kember Identity in JavaScript</title>
 <!-- http://pajhome.org.uk/crypt/md5/ -->
 <script src="md5-min.js"></script>
-<script src="javascript.js"></script>
+<script src="javascript-Lim-Chee-Aun.js"></script>
 <h1>Kember Identity in JavaScript</h1>
 <div id="kemberDiv">Running...<br></div>
 <script>
